[gd_scene load_steps=4 format=3 uid="uid://cbws2mtjd4g0b"]

[ext_resource type="Script" path="res://scenes/enemies/deer.gd" id="1_hufwa"]
[ext_resource type="Texture2D" uid="uid://bijk7lq442l0f" path="res://Assets/deer.png" id="2_4fvw7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ycmln"]
radius = 356.439

[node name="Deer" type="CharacterBody2D" groups=["Deers"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_hufwa")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-1.5, 0)
polygon = PackedVector2Array(-34.5, 0, -32.5, -6, -30.5, -8, -25.5, -10, -21.5, -10, -16.5, -8, -6.5, -8, -1.5, -11, 5.5, -6, 11.5, -5, 19.5, -5, 22.5, -11, 24.5, -15, 28.5, -17, 35.5, -14, 35.5, -10, 29.5, -4, 29.5, 3, 36.5, 8, 36.5, 15, 31.5, 16, 26.5, 15, 22.5, 9, 18.5, 6, 6.5, 6, 2.5, 9, -2.5, 10, -8.5, 9, -15.5, 9, -21.5, 11, -27.5, 10, -31.5, 6)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -3.14159
scale = Vector2(0.0633333, 0.0725)
texture = ExtResource("2_4fvw7")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_ycmln")

[node name="NoseLaserSpawn" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="NoseLaserSpawn"]
position = Vector2(29, 0)

[node name="NoseLaserCooldown" type="Timer" parent="."]
wait_time = 3.5

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="NoseLaserCooldown" to="." method="_on_nose_laser_cooldown_timeout"]
